--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Online Marketing website</title>
 </head>
 
 <body>
@@ -38,7 +38,7 @@
 
         <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO is impotant" class="float-left" />
-            <h2>Search Engine Optimization</h2>
+            <h2>SEO</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
@@ -46,7 +46,7 @@
 
         <section id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="builing Reputation online" class="float-right" />
-            <h2>Online Reputation Management</h2>
+            <h2>Online Reputation </h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
@@ -54,7 +54,7 @@
 
         <section id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="promote business online" class="float-left" />
-            <h2>Social Media Marketing</h2>
+            <h2>Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
@@ -73,7 +73,7 @@
         </aside>
 
         <aside class="benefit-brand">
-            
+
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="increase SEO" />
             <p>
